--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,31 +1,37 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h2>Přihlášení</h2>
-    <form action="" method="post" novalidate>
-        {{ form.hidden_tag() }} 
-        
-        <div class="form-field">
-            {{ form.username.label }}<br>
-            {{ form.username(size=32) }}<br>
-            {% for error in form.username.errors %}
-                <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
+    <div style="max-width: 500px; margin: 2rem auto;">
+        <div class="card">
+            <h2 class="text-center">Přihlášení</h2>
+            <form action="" method="post" novalidate>
+                {{ form.hidden_tag() }} 
+                
+                <div class="form-group">
+                    {{ form.username.label }}
+                    {{ form.username() }}
+                    {% for error in form.username.errors %}
+                        <span class="text-danger">{{ error }}</span>
+                    {% endfor %}
+                </div>
+                
+                <div class="form-group">
+                    {{ form.password.label }}
+                    {{ form.password() }}
+                    {% for error in form.password.errors %}
+                        <span class="text-danger">{{ error }}</span>
+                    {% endfor %}
+                </div>
+                
+                <div class="form-group flex items-center gap-1">
+                    {{ form.remember_me() }} {{ form.remember_me.label }}
+                </div>
+                
+                {{ form.submit(class="btn btn-primary", style="width: 100%;") }}
+            </form>
+            <p class="mt-2 text-center text-secondary">
+                Nový uživatel? <a href="{{ url_for('auth.register') }}" style="color: var(--primary);">Zaregistrujte se</a>
+            </p>
         </div>
-        
-        <div class="form-field">
-            {{ form.password.label }}<br>
-            {{ form.password(size=32) }}<br>
-            {% for error in form.password.errors %}
-                <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </div>
-        
-        <div class="form-field">
-            {{ form.remember_me() }} {{ form.remember_me.label }}
-        </div>
-        
-        {{ form.submit() }}
-    </form>
-    <p>Nový uživatel? <a href="{{ url_for('auth.register') }}">Klikněte pro registraci!</a></p>
+    </div>
 {% endblock %}
