--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -1,34 +1,41 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h2>Registrace</h2>
-    <form action="" method="post" novalidate>
-        {{ form.hidden_tag() }} 
-        
-        <div class="form-field">
-            {{ form.username.label }}<br>
-            {{ form.username(size=32) }}<br>
-            {% for error in form.username.errors %}
-                <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </div>
-        
-        <div class="form-field">
-            {{ form.password.label }}<br>
-            {{ form.password(size=32) }}<br>
-            {% for error in form.password.errors %}
-                <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </div>
+    <div style="max-width: 500px; margin: 2rem auto;">
+        <div class="card">
+            <h2 class="text-center">Registrace</h2>
+            <form action="" method="post" novalidate>
+                {{ form.hidden_tag() }} 
+                
+                <div class="form-group">
+                    {{ form.username.label }}
+                    {{ form.username() }}
+                    {% for error in form.username.errors %}
+                        <span class="text-danger">{{ error }}</span>
+                    {% endfor %}
+                </div>
+                
+                <div class="form-group">
+                    {{ form.password.label }}
+                    {{ form.password() }}
+                    {% for error in form.password.errors %}
+                        <span class="text-danger">{{ error }}</span>
+                    {% endfor %}
+                </div>
 
-        <div class="form-field">
-            {{ form.password2.label }}<br>
-            {{ form.password2(size=32) }}<br>
-            {% for error in form.password2.errors %}
-                <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
+                <div class="form-group">
+                    {{ form.password2.label }}
+                    {{ form.password2() }}
+                    {% for error in form.password2.errors %}
+                        <span class="text-danger">{{ error }}</span>
+                    {% endfor %}
+                </div>
+                
+                {{ form.submit(class="btn btn-primary", style="width: 100%;") }}
+            </form>
+             <p class="mt-2 text-center text-secondary">
+                Máte již účet? <a href="{{ url_for('auth.login') }}" style="color: var(--primary);">Přihlaste se</a>
+            </p>
         </div>
-        
-        {{ form.submit() }}
-    </form>
+    </div>
 {% endblock %}
