--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -23,8 +23,9 @@
                     {% endfor %}
                 </div>
                 
-                <div class="form-group flex items-center gap-1">
-                    {{ form.remember_me() }} {{ form.remember_me.label }}
+                <div class="form-group checkbox-group">
+                    {{ form.remember_me() }}
+                    {{ form.remember_me.label }}
                 </div>
                 
                 {{ form.submit(class="btn btn-primary", style="width: 100%;") }}
