--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div style="max-width: 500px; margin: 2rem auto;">
+    <div class="form-container">
         <div class="card">
             <h2 class="text-center">Registrace</h2>
             <form action="" method="post" novalidate>
