--- a/app/static/style.css
+++ b/app/static/style.css
@@ -52,6 +52,10 @@ main {
   padding: 2rem;
 }
 
+.container h2 {
+    margin-bottom: 1rem;
+}
+
 /* Header / Navigation */
 header {
   background: rgba(30, 41, 59, 0.7);
